# river

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am
plugins/: Makefile.am  growl.py  print.py
river/: Makefile.am  river-config.c  river-config.h  river-xmpp.c  river-xmpp.h  river.c  river.in  river.py  river_config.py  river_plugins.py  river_xmpp.py  summer_util.py
river/data/: config.xml
river/plugins/: print.py
river/tests/: Makefile.am
