AC_INIT([river], [0.1.0], [ozamosi@flukkost.nu], [river])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

GNOME_COMMON_INIT
GNOME_DOC_INIT
GNOME_MAINTAINER_MODE_DEFINES
GNOME_COMPILE_WARNINGS
GNOME_CXX_WARNINGS

GTK_DOC_CHECK(1.9)

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=river
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.18.0
LIBSUMMER_REQUIRED=0.1.0
LOUDMOUTH_REQUIRED=1.4.0

AM_PATH_GLIB_2_0($GLIB_REQUIRED,,,)
if test "$GLIB_LIBS" = ""; then
       AC_MSG_ERROR(GLIB $GLIB_REQUIRED or later is required to build river)
fi
GLIB_CFLAGS="$GLIB_CFLAGS -DG_DISABLE_SINGLE_INCLUDES"

PKG_CHECK_MODULES(LIBSUMMER, libsummer-1.0 >= $LIBSUMMER_REQUIRED)
PKG_CHECK_MODULES(LOUDMOUTH, loudmouth-1.0 >= $LOUDMOUTH_REQUIRED)

AC_SUBST(RIVER_CFLAGS)
AC_SUBST(RIVER_LIBS)

AC_CONFIG_FILES([Makefile
	po/Makefile.in
	river/Makefile
	river/tests/Makefile])

AC_OUTPUT
