AC_INIT([river], [0.1.0], [ozamosi@flukkost.nu], [river])
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_INSTALL
AM_PATH_PYTHON

GNOME_COMMON_INIT

AS_AC_EXPAND(PYTHONDIR, $pkgpythondir)
AC_MSG_NOTICE(Storing python package in $PYTHONDIR)

PYGOBJECT_REQUIRED=2.14.0
LIBSUMMER_REQUIRED=0.1.0

PKG_CHECK_MODULES(LIBSUMMER, libsummer-1.0 >= $LIBSUMMER_REQUIRED)
PKG_CHECK_MODULES(PYGOBJECT, pygobject-2.0 >= $PYGOBJECT_REQUIRED)

AC_CONFIG_FILES([Makefile
	river/Makefile
	river/river])

AC_OUTPUT
